<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">1001Beers to Drink Before You Die</string>
    <string name="title_beer_detail">Beer Detail</string>

    <!-- TESTES -->
    <string name="beer_about">Duvel is a natural beer with a subtle bitterness, a refined flavour and a distinctive hop character. The unique brewing process, which takes about 90 days, guarantees a pure character, delicate effervescence and a pleasant sweet taste of alcohol.</string>
    <string name="drink">Drink</string>
    <string name="drank">Drank</string>
    <string name="not_drank">Not Drank</string>

    <!-- Labels -->
    <string name="label_country">Country: </string>
    <string name="label_abv">ABV: </string>
    <string name="label_release_date">Release Date: </string>
    <string name="label_temperature_to_drink">Serving temperature: </string>
    <string name="marked_not_drank">Haven\'t you ever drink this beer?</string>
    <string name="no_i_havent">No, I haven\'t</string>
    <string name="ive_already_drank">I\'ve already drank it</string>
    <string name="one_more_congratulations"></string>
    <string name="filter_beer_name">Search beer</string>
    <string name="filter_country">Filter by country</string>
    <string name="clear">Clear</string>
    <string name="filter">Filter</string>
    <string name="show_all">Show all</string>
    <string name="to_drink">Show to drink</string>

    <plurals name="one_more_congratulations">
        <item quantity="one">Congratulations!!! \n Now there are just 1 beer.</item>
        <item quantity="other">Congratulations!!! \n Now there are just %d beers.</item>
    </plurals>

    <!-- Settings -->

    <string name="settings">Settings</string>
    <string name="social_networks">Social Settings</string>
    <string name="facebook_share_checkin">Push Check-ins to Facebook</string>
    <string name="general_settings">General Settings</string>
    <string name="select_temperature_metric">Metric System Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="pref_key_face_share_checkin">pref_key_face_share_chekin</string>
    <string name="pref_temperature">pref_temperature</string>
    <string name="statistics">Statistics</string>

    <!-- Countries -->
    <string name="all_contries">All countries</string>
    <string name="canada">Canada</string>
    <string name="brazil">Brazil</string>
    <string name="isle_of_man">Isle Of Man</string>
    <string name="italy">Italy</string>
    <string name="czech_republic">Czech Republic</string>
    <string name="usa">Usa</string>
    <string name="kenya">Kenya</string>
    <string name="scotland">Scotland</string>
    <string name="malta">Malta</string>
    <string name="france">France</string>
    <string name="ethiopia">Ethiopia</string>
    <string name="bosnia_herzegovina">Bosnia Herzegovina</string>
    <string name="slovakia">Slovakia</string>
    <string name="australia">Australia</string>
    <string name="peru">Peru</string>
    <string name="laos">Laos</string>
    <string name="palestine">Palestine</string>
    <string name="wales">Wales</string>
    <string name="argentina">Argentina</string>
    <string name="norway">Norway</string>
    <string name="nigeria">Nigeria</string>
    <string name="lithuania">Lithuania</string>
    <string name="israel">Israel</string>
    <string name="belarus">Belarus</string>
    <string name="singapore">Singapore</string>
    <string name="turkey">Turkey</string>
    <string name="south_korea">South Korea</string>
    <string name="northern_ireland">Northern Ireland</string>
    <string name="montenegro">Montenegro</string>
    <string name="slovenia">Slovenia</string>
    <string name="germany">Germany</string>
    <string name="belgium">Belgium</string>
    <string name="thailand">Thailand</string>
    <string name="spain">Spain</string>
    <string name="ukraine">Ukraine</string>
    <string name="ireland">Ireland</string>
    <string name="netherlands">Netherlands</string>
    <string name="china">China</string>
    <string name="denmark">Denmark</string>
    <string name="poland">Poland</string>
    <string name="indonesia">Indonesia</string>
    <string name="antigua">Antigua</string>
    <string name="namibia">Namibia</string>
    <string name="sweden">Sweden</string>
    <string name="latvia">Latvia</string>
    <string name="croatia">Croatia</string>
    <string name="finland">Finland</string>
    <string name="hungary">Hungary</string>
    <string name="switzerland">Switzerland</string>
    <string name="new_zealand">New Zealand</string>
    <string name="russia">Russia</string>
    <string name="bulgaria">Bulgaria</string>
    <string name="jamaica">Jamaica</string>
    <string name="romania">Romania</string>
    <string name="albania">Albania</string>
    <string name="england">England</string>
    <string name="portugal">Portugal</string>
    <string name="estonia">Estonia</string>
    <string name="south_africa">South Africa</string>
    <string name="egypt">Egypt</string>
    <string name="trinidad_tobago">Trinidad Tobago</string>
    <string name="mexico">Mexico</string>
    <string name="india">India</string>
    <string name="austria">Austria</string>
    <string name="vietnam">Vietnam</string>
    <string name="mozambique">Mozambique</string>
    <string name="greece">Greece</string>
    <string name="sri_lanka">Sri Lanka</string>
    <string name="japan">Japan</string>


</resources>
