<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/social_networks">
        <CheckBoxPreference
            android:key="@string/pref_key_face_share_checkin"
            android:title="@string/facebook_share_checkin"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/general_settings">
        <ListPreference
            android:key="@string/pref_temperature"
            android:title="@string/select_temperature_metric"
            android:summary="%s"
            android:entries="@array/temperature_metric_entries"
            android:entryValues="@array/temperature_metric_entries"
            android:defaultValue="@string/celsius" />
    </PreferenceCategory>

</PreferenceScreen>