<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/beer_search"
        android:title="@string/filter_beer_name"
        android:icon="@android:drawable/ic_menu_search"
        yourapp:showAsAction="ifRoom|collapseActionView"
        yourapp:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/filter_drink"
        android:title="@string/show_all"
        yourapp:showAsAction="always" />
    <item android:id="@+id/filter_country"
        android:title="@string/filter_country"
        yourapp:showAsAction="never" />
    <item android:id="@+id/beer_statistics_menu"
        android:title="@string/statistics"
        yourapp:showAsAction="never" />
    <item android:id="@+id/settings_menu"
        android:title="@string/settings"
        yourapp:showAsAction="never" />
</menu>